--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "public-ip": "^2.4.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.1.1",
+    "temp-dir": "^1.0.0",
     "uuid": "^3.2.1"
   }
 }
