--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Dobobaie",
   "license": "ISC",
   "dependencies": {
+    "eventm": "0.0.1",
     "get-port": "^3.2.0",
     "public-ip": "^2.4.0",
     "socket.io": "^2.0.4",
