--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nthread-js",
-  "version": "0.0.3",
-  "description": "Create real thread in Node Js from a lambda, file or external app",
-  "main": "nthread.js",
+  "version": "1.0.0",
+  "description": "Create easily threads in NodeJs",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,13 +24,14 @@
   "author": "Dobobaie",
   "license": "ISC",
   "dependencies": {
-    "eventm": "0.0.1",
-    "get-port": "^3.2.0",
-    "public-ip": "^2.4.0",
-    "socket.io": "^2.0.4",
-    "socket.io-client": "^2.1.1",
-    "temp-dir": "^1.0.0",
-    "uuid": "^3.2.1"
+    "eventm": "1.2.1",
+    "get-port": "^5.0.0",
+    "process-exists": "^3.1.0",
+    "public-ip": "^3.2.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "temp-dir": "^2.0.0",
+    "uuid": "^3.3.3"
   },
   "bugs": {
     "url": "https://github.com/dobobaie/nthread-js/issues"
