--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nthread-js",
-  "version": "1.0.2",
-  "description": "Create easily threads in NodeJs",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "Create easily children thread (process) in NodeJs. The purpose is to delegate some part of your code in another process.",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +24,8 @@
   "author": "Dobobaie",
   "license": "ISC",
   "dependencies": {
-    "eventm": "1.3.0",
+    "bluebird": "^3.7.2",
+    "fast-safe-stringify": "^2.0.7",
     "get-port": "^5.0.0",
     "process-exists": "^3.1.0",
     "public-ip": "^3.2.0",
